--- a/mongo-cards/public/stylesheets/style.css
+++ b/mongo-cards/public/stylesheets/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 .Avatar {
-    border-color: black;
+    border-color: gray;
     border-style: solid;
     border-radius: 10px;
     background-color: #c1c0bf;
@@ -76,6 +76,7 @@ body {
     width: 100%;
     background-color: #ffffff;
     border-radius: 5px;
+    padding: 5px;
 }
 
 .Avatar #rare_status {
@@ -168,6 +169,8 @@ input[type=submit]:hover {
     border-radius: 10px;
     padding: 5px;
     text-align: center;
+    line-height: 30px;
+
     border: solid;
     border-color: black;
     color: white;
@@ -181,7 +184,7 @@ input[type=submit]:hover {
     border-radius: 10px;
     padding: 5px;
     text-align: center;
-    line-height: center;
+    line-height: 30px;
     border: solid;
     border-color: black;
     color: white;
